--- a/Projects/Kitchen Aid/ClassLibrary1/KitchenAidTool.csproj
+++ b/Projects/Kitchen Aid/ClassLibrary1/KitchenAidTool.csproj
@@ -41,11 +41,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseManager.cs" />
+    <Compile Include="EmergencyContact.cs" />
     <Compile Include="Pantry.cs" />
     <Compile Include="Recipe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecipeManager.cs" />
     <Compile Include="TextRecipe.cs" />
+    <Compile Include="VideoRecipe.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
