--- a/Projects/Kitchen Aid/Kitchen Aid/KitchenAid.csproj
+++ b/Projects/Kitchen Aid/Kitchen Aid/KitchenAid.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmergencyContact.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
