--- a/Projects/Kitchen Aid/ClassLibrary1/KitchenAidTool.csproj
+++ b/Projects/Kitchen Aid/ClassLibrary1/KitchenAidTool.csproj
@@ -33,6 +33,8 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,12 +44,30 @@
   <ItemGroup>
     <Compile Include="DatabaseManager.cs" />
     <Compile Include="EmergencyContact.cs" />
-    <Compile Include="Pantry.cs" />
+    <Compile Include="FrontPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrontPage.Designer.cs">
+      <DependentUpon>FrontPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RecipeManager.cs" />
     <Compile Include="Recipe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RecipeManager.cs" />
     <Compile Include="TextRecipe.cs" />
     <Compile Include="VideoRecipe.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\DataSources\DatabaseManager.datasource" />
+    <None Include="Properties\DataSources\EmergencyContact.datasource" />
+    <None Include="Properties\DataSources\Recipe.datasource" />
+    <None Include="Properties\DataSources\RecipeManager.datasource" />
+    <None Include="Properties\DataSources\TextRecipe.datasource" />
+    <None Include="Properties\DataSources\VideoRecipe.datasource" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="FrontPage.resx">
+      <DependentUpon>FrontPage.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
