--- a/Projects/Kitchen Aid/ClassLibrary1/KitchenAidTool.csproj
+++ b/Projects/Kitchen Aid/ClassLibrary1/KitchenAidTool.csproj
@@ -50,10 +50,28 @@
     <Compile Include="FrontPage.Designer.cs">
       <DependentUpon>FrontPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="RecipeCompletionPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RecipeCompletionPage.Designer.cs">
+      <DependentUpon>RecipeCompletionPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="RecipeManager.cs" />
     <Compile Include="Recipe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextRecipe.cs" />
+    <Compile Include="VideoRecipeAdditionPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VideoRecipeAdditionPage.Designer.cs">
+      <DependentUpon>VideoRecipeAdditionPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TextRecipeAdditionPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TextRecipeAdditionPage.Designer.cs">
+      <DependentUpon>TextRecipeAdditionPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="VideoRecipe.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -68,6 +86,34 @@
     <EmbeddedResource Include="FrontPage.resx">
       <DependentUpon>FrontPage.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="RecipeCompletionPage.resx">
+      <DependentUpon>RecipeCompletionPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VideoRecipeAdditionPage.resx">
+      <DependentUpon>VideoRecipeAdditionPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TextRecipeAdditionPage.resx">
+      <DependentUpon>TextRecipeAdditionPage.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="AxWMPLib">
+      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>aximp</WrapperTool>
+      <Isolated>False</Isolated>
+    </COMReference>
+    <COMReference Include="WMPLib">
+      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
